[project]
name = "pdf-talker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.27.0",
    "instructor[google-genai]>=1.10.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
]
